# HCATNetwork

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
HCATNetwork/: __init__.py  edge.py  graph-o-shop_2D.py  graph.py  node.py  zz_node_classes_old.py  zz_prova.py
HCATNetwork/core/: __init__.py  core.py
HCATNetwork/draw/: animations.py  draw.py  styles.py
HCATNetwork/edge/: __init__.py  edge.py
HCATNetwork/graph/: graph.py  legacy_graph_2023_10_31.py
HCATNetwork/io/: SimpleCenterlineGraph.py  io.py
HCATNetwork/node/: node.py
HCATNetwork/test/: prova_grafo.GML
HCATNetwork/utils/slicer/: slicer.py
Test_Installation/: 00_import.py  README.md
hcatnetwork/: __init__.py  graph-o-shop_2D.py
hcatnetwork/core/: __init__.py  core.py
hcatnetwork/draw/: __init__.py  animations.py  draw.py  styles.py
hcatnetwork/edge/: __init__.py  edge.py
hcatnetwork/geometry/: reference_frames.py
hcatnetwork/graph/: __init__.py  graph.py
hcatnetwork/io/: __init__.py  io.py
hcatnetwork/node/: __init__.py  node.py
hcatnetwork/utils/: __init__.py  change_graphs_property_name.py
hcatnetwork/utils/geometry/: __init__.py  orthogonal_axes.py
hcatnetwork/utils/slicer/: __init__.py  slicer.py
test/: import_test.py  package_parent_dir.py  zz_prova.py
