[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name         = "HCATNetwork"
version      = "2023.04.06-02"
description      = "A package which defines standardised dictionaries and functionalities to create and work with Heart coronary Artery Tree Graphs"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Matteo Leccardi", email = "matteo.leccardi@polimi.it"},
]
keywords = ["Coronary", "Artery", "Tree", "Network", "Graph", "Map"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Software requirements
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "NetworkX",
    "PyVis"
]


# URLs
[project.urls]
homepage = "https://github.com/AAMIASoftwares-research/HCATNetwork"
documentation = "https://github.com/AAMIASoftwares-research/HCATNetwork"
repository = "https://github.com/AAMIASoftwares-research/HCATNetwork.git"
institution = "https://www.polimi.it/"
institution-lab = "https://www.b3lab.deib.polimi.it/"
bug-tracker = "https://github.com/AAMIASoftwares-research/HCATNetwork/issues"


# Define Package(s)
[tool.setuptools.packages.find]
include = ["HCATNetwork*"]
exclude = ["HCATNetwork.test*"]







### old stuff ###
#[options]
#packages = find:
#zip_safe = True
#include_package_data = True
#python_requires  = >=3.10

#[options.package_data]
#* = README.md
#HCATNetwork = *.json, *.txt
