[metadata]
name         = HCATNetwork
version      = 2023.03.22-01
author       = Matteo Leccardi
author_email = matteo.leccardi@polimi.it
url          = https://github.com/AAMIASoftwares-research/HCATNetwork
download_url = https://github.com/AAMIASoftwares-research/HCATNetwork
project_urls = {
        "Bug Tracker":         "https://github.com/AAMIASoftwares-research/HCATNetwork/issues",
        "Institution Website": "https://www.polimi.it/",
        "Lab Website":         "https://www.b3lab.deib.polimi.it/"
    }
description      = Testing installation of Package
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = Coronary, Artery, Tree, Network, Graph, Map
license      = MIT
license_file = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires  = >=3.10
install_requires =
    numpy
    matplotlib

[options.package_data]
* = README.md
HCATNetwork = *.json, *.txt
